--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -7,6 +7,8 @@
     android:fitsSystemWindows="true"
     tools:context="com.udanano.pocketcloset2.MainActivity">
 
+
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,7 +23,15 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/vf"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <include android:id="@+id/include_main" layout="@layout/content_main" />
+        <include android:id="@+id/include_modify" layout="@layout/modify_pics" />
+    </ViewFlipper>
+
+    <!--<include layout="@layout/content_main" />-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
