--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,7 +17,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/dummytext1" />
+    <GridView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/gridview_clothes"
+        android:numColumns="2"
+        android:stretchMode="columnWidth"
+        android:layout_gravity="center"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="0dp"/>
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
